--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    Hi. I'm {{ site.author }}.
-    <h3 class="tagline">Here are some thoughts of mine.</h3>
+    Rashmi Yadav
+    <h3 class="tagline">Ruby On Rails Developer</h3>
   </div>
 </div>
