--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    Rashmi Yadav
-    <h3 class="tagline">Ruby On Rails Developer</h3>
+    {{ site.title }}
+    <h3 class="tagline">{{ site.subtitle }}</h3>
   </div>
 </div>
