--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,7 @@
 <ul class="nav">
     {% for link in site.navigation %}
-        <li {% if page.url == link.url %}class="active"{% endif %}><a href="{{ link.url }}">{{ link.text }}</a></li>
+    <li {% if page.url == link.url %}class="active"{% endif %}>
+    <a href="{{ root_url }}/{{link.url}}">{{ link.text }}</a>
+    </li>
     {% endfor %}
 </ul>
