--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -30,6 +30,11 @@
 	<h5>{% include post/date.html %}<i class="icon-calendar-empty"></i> {{ time }}</h5>
   </div>
 </header>
+{% unless page.sharing == false %}
+<div class="span6 social-sharing">
+  {% include post/sharing.html %}
+</div>
+{% endunless %}
   <div class="row-fluid">
     <div class="span12">
       {{ content }}
